syntax = "proto3";
package rarimo.rarimocore.rarimocore;

import "google/protobuf/any.proto";

option go_package = "github.com/rarimo/rarimo-core/x/rarimocore/types";

enum OpType {
  TRANSFER = 0;
  CHANGE_PARTIES = 1;
  FEE_TOKEN_MANAGEMENT = 2;
  CONTRACT_UPGRADE = 3;
  IDENTITY_DEFAULT_TRANSFER = 4;
  IDENTITY_AGGREGATED_TRANSFER = 5;
  IDENTITY_GIST_TRANSFER = 6;
  IDENTITY_STATE_TRANSFER = 7;
  WORLDCOIN_IDENTITY_TRANSFER = 8;
  CSCA_ROOT_UPDATE = 9;
  ARBITRARY = 10;
}

enum OpStatus {
  INITIALIZED = 0;
  APPROVED = 1;
  NOT_APPROVED = 2;
  SIGNED = 3;
}

message Operation {
  // Should be in a hex format 0x...
  string index = 1;
  OpType operationType = 2;
  // Corresponding to type details
  google.protobuf.Any details = 3;
  OpStatus status = 4;
  string creator = 5;
  uint64 timestamp = 6;
}
