syntax = "proto3";
package rarimo.rarimocore.tokenmanager;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
option go_package = "github.com/rarimo/rarimo-core/x/tokenmanager/types";

enum NetworkType {
  EVM = 0;
  Solana = 1;
  Near = 2;
  Other = 3;
  Rarimo = 4;
}

enum NetworkParamType {
  BRIDGE = 0;
  FEE = 1;
  IDENTITY = 2;
}

message Network {
  // network name
  string name = 1;
  NetworkType type = 2;
  repeated NetworkParams params = 3 [(gogoproto.nullable) = false];
}

message NetworkParams {
  NetworkParamType type = 1;
  // Corresponding to type details
  google.protobuf.Any details = 2;
}

message BridgeNetworkParams {
  string contract = 1;
  // BridgeAdmin only for Solana
  string admin = 2;
}

message FeeNetworkParams {
  string contract = 1;
  repeated FeeToken feeTokens = 2;
}

message IdentityNetworkParams {
  string contract = 1;
}

message FeeToken {
  // contract address hex
  string contract = 1;
  string amount = 2;
}

// Params defines the parameters for the module.
message Params {
  repeated Network networks = 1;
}
